сделал первую задачу